# cpp-wasm-draw-graphic

./: .clang-format  .gitignore  CMakeLists.txt  sdl_2_0_sample.html  sdl_2_0_sample.js  sdl_2_0_sample.wasm
src/: main.cpp  main2.txt  main3.txt  main4.txt  main_warna.txt
